# jarvis-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  audio_diagnostics.py  docker-compose.yml  env.example  jarvis_logs.db-shm  jarvis_logs.db-wal  jarvis_traces.db-shm  jarvis_traces.db-wal  main.py  pyproject.toml  requirements.txt  server.py  voice_demo.py
.claude/commands/: trace.md
.github/workflows/: tests.yml
docs/: frontend_implementation.md  lighting_agent.md  roku_agent_guide.md
jarvis/: __init__.py  agent.py  agent_factory.py  builder.py  calendar_service.py  config.py  constants.py  log_viewer.py  logger.py  main_agent.py  main_jarvis.py  main_network.py  performance.py  profile.py  registry.py  utils.py
jarvis/agents/: __init__.py  agent_network.py  base.py  calendar_agent.py  capability.py  collaboration.py  dialogue.py  factory.py  lights_agent.py  message.py  nlu_agent.py  orchestrator_agent.py  protocal_agent.py  response.py  response_aggregator.py  response_validator.py  task.py  ui_agent.py
jarvis/ai_clients/: __init__.py  anthropic_client.py  base.py  dummy_client.py  factory.py  openai_client.py  scripted_client.py
jarvis/cli/: __init__.py  commands_dashboard.py  config_dashboard.py  models_dashboard.py  todo_dashboard.py
jarvis/core/: __init__.py  builder.py  config.py  constants.py  error_middleware.py  errors.py  feedback.py  method_recorder.py  method_recorder_base.py  (+5 more)
personal-scheduler/: INTEGRATION.md  Makefile  main.cpp
scripts/: clear_logs.py  run_tests.sh
server/: __init__.py  auth.py  crypto.py  database.py  dependencies.py  main.py  models.py
tests/: README_ROUTING_TESTS.md  __init__.py  example_routing_test.py  test_admin_router.py  test_agent_factory.py  test_agent_network.py  test_agent_response.py  test_agents_router.py  test_ai_client_factory.py  test_anthropic_client.py  test_api_run_protocol.py  test_auth_api.py  test_base_agent.py  test_builder.py  test_calendar_agent.py  test_calendar_agent_lead.py  test_calendar_service.py  test_canvas_agent.py  test_canvas_service.py  test_capabilities_agent.py  test_capability.py  test_chat_agent.py  test_chat_agent_lead.py  test_chat_agent_robustness.py  test_claude_code_runner.py  test_coding_agent.py  test_collaboration_mixin.py  test_config.py  test_constants.py  test_coordinator.py  test_crypto.py  test_dag_execution.py  test_database.py  test_dependencies.py  test_device_api.py  test_device_monitor_agent.py  test_dialogue.py  test_dialogue_e2e_real.py  test_discovery_intelligence.py  test_dummy_client.py  (+80 more)
(+327 files in other folders)
