[tool.poetry]
name = "jarvis-server"
version = "0.1.0"
description = "FastAPI server exposing collaborative calendar agents"
authors = ["Jarvis Contributors"]
readme = "README.md"
packages = [{include = "jarvis"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = "0.29.0"
httpx = "0.27.0"
aiohttp = "3.9.5"
tzlocal = "5.2"
colorama = "0.4.6"
python-dotenv = "1.0.1"
pydantic = "2.7.1"
openai = "1.11.0"
anthropic = "0.10.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
